--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang ="ja">
   <head>
     <meta charset = "UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>おうちでハロウィン2021 | HoppeTown</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -191,7 +191,6 @@
       <h1>
         <img src="image/main/main_title.png" alt="タイトル" class="main-title">
       </h1>
-      <img src="image/main/main.png" alt="メイン背景" class="main-image">
     </div>
     <div class="concept-luncheon-wrapper" id="cl">
       <div class="main-body">
@@ -240,11 +239,6 @@
         </div>
       </div>
       </div>
-      <div class="bg">
-        <div class="concept-luncheon-bg">
-          <img src="image/bg/concept_bg_PC.png" alt="コンセプト&ランチョンマット背景" class="cl-PC" >
-          <img src="image/bg/concept_bg_SP.png" alt="コンセプト&ランチョンマット背景" class="cl-SP" >
-        </div>
       </div>
     </div>
     <div class="menu-wrapper">
@@ -383,6 +377,12 @@
       </div>
       <p class="copylight">Copyright ©HoppeTown All Rights Reserved.</p>
     </footer>
+    <div class="bg">
+        <img src="image/main/main.png" alt="メイン背景" class="main-image">
+        <div class="concept-luncheon-bg">
+          <img src="image/bg/concept_bg_PC.png" alt="コンセプト&ランチョンマット背景" class="cl-PC" >
+          <img src="image/bg/concept_bg_SP.png" alt="コンセプト&ランチョンマット背景" class="cl-SP" >
+        </div>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
