--- a/index.html
+++ b/index.html
@@ -213,11 +213,12 @@
           </h3>
           <img src="image/luncheon/photo.jpg" alt="ランチョンマット写真" class="luncheon_photo">
           <div class="dl">
-            <h4>以下からダウンロード!</h4>
-            <p>無料でダウンロードできます。</p>
-            <div class="line">
-              <img src="image/line_left.svg" alt="左線">
-              <img src="image/line_right.svg" alt="右線">
+            <img src="image/line_left.svg" alt="左線">
+            <div class="dl-text">
+              <h4>以下からダウンロード!</h4>
+              <p>無料でダウンロードできます。</p>
+            </div>
+            <img src="image/line_right.svg" alt="右線">
             </div>
           </div>
           <div class="coloring">
