--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="image/logo_header.png" alt="HoppeTown">
         </a>
         <nav>
-          <ul class="show-PC">
+          <ul>
             <li>
               <form action="#" method="get" class="search">
                 <input type="text" name="search" placeholder="キーワードで検索">
@@ -239,8 +239,6 @@
           </div>
         </div>
       </div>
-      </div>
-      </div>
     </div>
     <div class="menu-wrapper">
       <div class="main-body">
@@ -249,96 +247,108 @@
             <h2><img src="image/text_HELLOWEEN.png" alt="helloween menu"></h2>
             <p>ハロウィンの要素を取り入れた料理をご紹介！</p>
           </div>
-          <div class="place2"></div>
           <div class="menu">
             <div class="millefeuille fadeIn">
-              <img src="image/menu/millefeuille_side.png" alt="解凍して重ねていくだけ！超簡単ミルクレープ">
-              <img src="image/menu/millefeuille.png" alt="ミルクレープ画像">
+              <div class="millefeuille-img">
+                <img src="image/menu/millefeuille_side.png" alt="解凍して重ねていくだけ！超簡単ミルクレープ">
+                <img src="image/menu/millefeuille.png" alt="ミルクレープ画像">
+              </div>
               <div class="about about-odd">
-                <h3 class="show-PC">愛らしいおばけの<br>ミルクレープ</h3>
-                <h3 class="show-SP">愛らしいおばけのミルクレープ</h3>
-                <h4>¥842(税込)</h4>
-                <p class="about-text">出来上がっているクレープ生地を、解凍して、<br>生クリームと交互に重ねていくだけ！<br>ご自宅でかんたんにミルクレープが楽しめます。</p>
-                <a href="#" class="detail dummy">
-                  <p>詳細を見る</p>
-                </a>
+                <div class="about-text">
+                  <h3 class="show-PC">愛らしいおばけの<br>ミルクレープ</h3>
+                  <h3 class="show-SP">愛らしいおばけのミルクレープ</h3>
+                  <h4>¥842(税込)</h4>
+                  <p>出来上がっているクレープ生地を、解凍して、<br>生クリームと交互に重ねていくだけ！<br>ご自宅でかんたんにミルクレープが楽しめます。</p>
+                  <a href="#" class="detail dummy">
+                    <p>詳細を見る</p>
+                  </a>
+                </div>
+                <img src="image/menu_bg_odd.svg" alt="背景-奇数">
               </div>
             </div>
             <div class="kidsPlate fadeIn">
-              <img src="image/menu/kidsPlate_side.png" alt="一緒にデコって楽しもう！キッズのハロウィンプレート">
-              <img src="image/menu/kidsPlate.png" alt="キッズプレート画像">
+              <div class="kidsPlate-img">
+                <img src="image/menu/kidsPlate_side.png" alt="一緒にデコって楽しもう！キッズのハロウィンプレート">
+                <img src="image/menu/kidsPlate.png" alt="キッズプレート画像">
+              </div>
               <div class="about about-even">
-                <h3 class="show-PC">お子さま<br>ハロウィンプレート</h3>
-                <h3 class="show-SP">お子さまハロウィンプレート</h3>
-                <h4>¥2,840(税込)</h4>
-                <p class="about-text">キッズの大好物のハンバーグに、おめめがついた<br>ウインナー。そしておばけのサンドイッチを<br>盛りつけしたお子様ハロウィン料理です♪</p>
-                <a href="#" class="detail dummy">
-                  <p>詳細を見る</p>
-                </a>
+                <div class="about-text">
+                  <h3 class="show-PC">お子さま<br>ハロウィンプレート</h3>
+                  <h3 class="show-SP">お子さまハロウィンプレート</h3>
+                  <h4>¥2,840(税込)</h4>
+                  <p class="about-text">キッズの大好物のハンバーグに、おめめがついた<br>ウインナー。そしておばけのサンドイッチを<br>盛りつけしたお子様ハロウィン料理です♪</p>
+                  <a href="#" class="detail dummy">
+                    <p>詳細を見る</p>
+                  </a>
+                </div>
+                <img src="../image/menu_bg_even.svg" alt="背景-偶数">
               </div>
             </div>
             <div class="plate fadeIn">
-              <img src="image/menu/plate_side.png" alt="大人も子供も楽しめる！盛りだくさんプレート">
-              <img src="image/menu/plate.png" alt="大人プレート画像">
+              <div class="plate-img">
+                <img src="image/menu/plate_side.png" alt="大人も子供も楽しめる！盛りだくさんプレート">
+                <img src="image/menu/plate.png" alt="大人プレート画像">
+              </div>
               <div class="about about-odd">
-                <h3 class="show-PC">かぼちゃと野菜の<br>ハロウィンプレート</h3>
-                <h3 class="show-SP">かぼちゃと野菜のハロウィンプレート</h3>
-                <h4>¥3,245(税込)</h4>
-                <p class="about-text">秋の素材を楽しめる、大人のプレートです。<br>素材のコクとまろやかさをまるごと味わえる、<br>贅沢なプレートです。</p>
-                <a href="#" class="detail dummy">
-                  <p>詳細を見る</p>
-                </a>
+                <div class="about-text">
+                  <h3 class="show-PC">かぼちゃと野菜の<br>ハロウィンプレート</h3>
+                  <h3 class="show-SP">かぼちゃと野菜のハロウィンプレート</h3>
+                  <h4>¥3,245(税込)</h4>
+                  <p class="about-text">秋の素材を楽しめる、大人のプレートです。<br>素材のコクとまろやかさをまるごと味わえる、<br>贅沢なプレートです。</p>
+                  <a href="#" class="detail dummy">
+                    <p>詳細を見る</p>
+                  </a>
+                </div>
+                <img src="image/menu_bg_odd.svg" alt="背景-奇数">
               </div>
             </div>
             <div class="pizza fadeIn">
-              <img src="image/menu/pizza_side.png" alt="海苔でお顔をアレンジ！大人数でもOKピザ">
-              <img src="image/menu/pizza.png" alt="ピザ画像">
+              <div class="pizza-img">
+                <img src="image/menu/pizza_side.png" alt="海苔でお顔をアレンジ！大人数でもOKピザ">
+                <img src="image/menu/pizza.png" alt="ピザ画像">
+              </div>
               <div class="about about-even">
-                <h3 class="show-PC">おばけの<br>デコレーションピザ</h3>
-                <h3 class="show-SP">おばけのデコレーションピザ</h3>
-                <h4>¥1,214(税込)</h4>
-                <p class="about-text">チーズや野菜を使ってかわいくデコレーション！<br> ピザ生地は簡単にできるけどおいしい！<br>トマトソースは何度でも食べたくるおいしさに♪</p>
-                <a href="#" class="detail dummy">
-                  <p>詳細を見る</p>
-                </a>
+                <div class="about-text">
+                  <h3 class="show-PC">おばけの<br>デコレーションピザ</h3>
+                  <h3 class="show-SP">おばけのデコレーションピザ</h3>
+                  <h4>¥1,214(税込)</h4>
+                  <p class="about-text">チーズや野菜を使ってかわいくデコレーション！<br> ピザ生地は簡単にできるけどおいしい！<br>トマトソースは何度でも食べたくるおいしさに♪</p>
+                  <a href="#" class="detail dummy">
+                    <p>詳細を見る</p>
+                  </a>
+                </div>
+                <img src="../image/menu_bg_even.svg" alt="背景-偶数">
               </div>
             </div>
             <div class="juice fadeIn">
-              <img src="image/menu/juice_side.png" alt="食事とご一緒に特製ジュース">
-              <img src="image/menu/juice.png" alt="ミックスジュース画像">
+              <div class="juice-img">
+                <img src="image/menu/juice_side.png" alt="食事とご一緒に特製ジュース">
+                <img src="image/menu/juice.png" alt="ミックスジュース画像">
+              </div>
               <div class="about about-odd about-juice">
-                <h3>みかんとブルーベリーの<br>ハロウィンミックス</h3>
-                <h4>¥533(税込)</h4>
-                <p class="about-text">まるでカクテルのような見た目のジュース！<br>下のジュースにガムシロップを入れ、<br>比重を重くすれば綺麗なジュースができます！</p>
-                <a href="#" class="detail dummy">
-                  <p>詳細を見る</p>
-                </a>
+                <div class="about-text">
+                  <h3>みかんとブルーベリーの<br>ハロウィンミックス</h3>
+                  <h4>¥533(税込)</h4>
+                  <p class="about-text">まるでカクテルのような見た目のジュース！<br>下のジュースにガムシロップを入れ、<br>比重を重くすれば綺麗なジュースができます！</p>
+                  <a href="#" class="detail dummy">
+                    <p>詳細を見る</p>
+                  </a>
+                </div>
+                <img src="image/menu_bg_odd.svg" alt="背景-奇数">
               </div>
             </div>
             <div class="buy-button">
-              <div class="buy">
-                <a href="#" class="buy-front dummy">
-                  <p>まとめて購入する</p>
-                  <img src="image/buy_button@2x.png" alt="まとめて購入ボタンの背景">
-                </a>
-                <div class="shadow"></div>
+              <a href="#" class="buy-front dummy">
+                <p>まとめて購入する</p>
+                <img src="image/buy_button@2x.png" alt="まとめて購入ボタンの背景">
+              </a>
+              <div class="shadow"></div>
             </div>
-            </div>
-
           </div>
         </div>
       </div>
-      <div class="bg">
-        <div class="menu-bg">
-          <img src="image/bg/menu_bg_PC.png" alt="メニュー背景" class="menu-PC">
-          <img src="image/bg/menu_bg_SP.png" alt="メニュー背景" class="menu-SP">
-        </div>
-      </div>
     </div>
-
-    <div class="last-wrapper">
-      <img src="image/last.jpg" alt="ラスト画像">
-    </div>
+    <div class="last-wrapper"></div>
     <div class="footer-wrapper">
       <div class="container">
         <p>Hoppe TownのSNSで、おいしい情報をチェック！</p>
@@ -384,6 +394,13 @@
           <img src="image/bg/concept_bg_PC.png" alt="コンセプト&ランチョンマット背景" class="cl-PC" >
           <img src="image/bg/concept_bg_SP.png" alt="コンセプト&ランチョンマット背景" class="cl-SP" >
         </div>
+        <div class="menu-bg">
+          <img src="image/bg/menu_bg_PC.png" alt="メニュー背景" class="menu-PC">
+        </div>
+        <div class="last-bg">
+          <img src="image/last.jpg" alt="ラスト画像">
+        </div>
+    </div>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
