--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <p>詳細を見る</p>
                   </a>
                 </div>
-                <img src="../image/menu_bg_even.svg" alt="背景-偶数">
+                <img src="image/menu_bg_even.svg" alt="背景-偶数">
               </div>
             </div>
             <div class="plate fadeIn">
@@ -317,7 +317,7 @@
                     <p>詳細を見る</p>
                   </a>
                 </div>
-                <img src="../image/menu_bg_even.svg" alt="背景-偶数">
+                <img src="image/menu_bg_even.svg" alt="背景-偶数">
               </div>
             </div>
             <div class="juice fadeIn">
